<resources>
    <string name="app_name">Health</string>
    <string name="join">회원가입</string>
    <string name="idcheck">중복확인</string>
    <string name="man">남자</string>
    <string name="female">여자</string>
    <string name="gender">성별</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="pw_check">PW 재확인</string>
    <string name="name">이름</string>
    <string name="birth">생년월일(ex. 1996-10-14))</string>
    <string name="blood">혈액형</string>
    <string name="height">키</string>
    <string name="weight">체중</string>
    <string-array name="bloodList">
        <item>알 수 없음</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="main_login">로그인</string>
    <string name="main_join">회원가입</string>
    <string name="main_maps">로드맵</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="MAPcalory">소모칼로리</string>
    <string name="footcount">걸음수</string>
    <string name="foot_count">0</string>
    <string name="consumedcalory">소모 칼로리</string>
    <string name="caloryCal">0</string>
    <string name="kcal">Kcal</string>
    <string name="CALstart">START</string>
    <string name="stop">STOP</string>
    <string name="ConsumedCalory">소모칼로리</string>
    <string name="save">SAVE</string>
    <string name="record_foot_calory">기록 걸음수 소모칼로리</string>
    <string name="maprecord">맵기록</string>
    <string name="order">주문</string>
    <string name="orderhistory">주문내역</string>
    <string name="cheer_up">CHEER UP! 기부 팔찌</string>
    <string name="price_5500">가격 : 5500원</string>
    <string name="Quantity">수량 :</string>
    <string name="inputQuantity">0</string>
    <string name="Quantity_count">개</string>
    <string name="inAddress">주소 입력</string>
    <string name="address">주소 :</string>
    <string name="ORDER">주 문</string>
    <string name="title_activity_map_result">Map</string>
</resources>
