<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Calory">

    <TextView
            android:text="@string/footcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_FootCount"/>
    <TextView
            android:text="@string/foot_count"
            android:layout_width="131dp"
            android:layout_height="62dp"
            android:id="@+id/lbl_FootCount" android:textSize="50sp"
            android:textStyle="bold" android:textAlignment="center"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/consumedcalory"
            android:layout_width="91dp"
            android:layout_height="28dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView7" android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="179dp"/>
    <TextView
            android:text="@string/caloryCal"
            android:layout_width="126dp"
            android:layout_height="45dp"
            android:id="@+id/lbl_Kcal" android:textSize="30sp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="20dp"/>
    <TextView
            android:text="@string/kcal"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:id="@+id/textView9" android:textSize="18sp" android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/lbl_Kcal" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="86dp" android:layout_marginTop="179dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/start"
            android:layout_width="92dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btn_Start" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"/>
    <Button
            android:text="@string/stop"
            android:layout_width="92dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btn_Stop" android:layout_marginStart="36dp"
            app:layout_constraintStart_toEndOf="@+id/btn_Start"
            app:layout_constraintVertical_bias="0.501"/>
    <Button
            android:text="@string/save"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Save" android:layout_marginStart="36dp"
            app:layout_constraintStart_toEndOf="@+id/btn_Stop" android:layout_marginTop="232dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="18dp" android:layout_marginBottom="231dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="349dp"
            android:layout_height="186dp"
            android:id="@+id/txt_Record" android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_Start"
            android:scrollbars = "vertical"/>
</android.support.constraint.ConstraintLayout>