<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context="Join">

    <TextView
            android:text="@string/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView" android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:id="@+id/txt_ID" android:hint="@string/id"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:autofillHints=""
            android:privateImeOptions="defaultInputmode=english"
            android:maxLength="14"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890-_"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:id="@+id/txt_PW" android:hint="@string/pw"
            android:layout_marginTop="23dp" app:layout_constraintTop_toBottomOf="@+id/txt_ID"
            android:autofillHints=""
            android:privateImeOptions="defaultInputmode=english;"
            android:maxLength="19"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890&amp;&lt;&gt;&apos;&quot;`~!@#$%^*()-_=+{}[]:;,.?/\|"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/txt_PWcheck" android:hint="@string/pw_check"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/txt_PW"
            android:autofillHints=""
            android:privateImeOptions="defaultInputmode=english;"
            android:maxLength="19"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890&amp;&lt;&gt;&apos;&quot;`~!@#$%^*()-_=+{}[]:;,.?/\|"/>
    <Button
            android:text="@string/idcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Check" android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/txt_ID" android:layout_marginStart="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="29dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:id="@+id/txt_Name" android:hint="@string/name"
            android:layout_marginTop="9dp" app:layout_constraintTop_toBottomOf="@+id/txt_PWcheck"
            android:autofillHints=""
            android:maxLength="19"/>
    <RadioGroup
            android:layout_width="211dp"
            android:layout_height="41dp"
            android:orientation="horizontal"
            android:layout_marginStart="27dp" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:id="@+id/radioGroup" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/spn_Day">
        <RadioButton
                android:text="@string/man"
                android:layout_width="80dp"
                android:layout_height="wrap_content" android:id="@+id/r_Man" android:layout_weight="1"
        />
        <RadioButton
                android:text="@string/female"
                android:layout_width="80dp"
                android:layout_height="wrap_content" android:id="@+id/r_Female" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:textSize="18sp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <Spinner
            android:layout_width="138dp"
            android:layout_height="30dp"
            android:id="@+id/spn_Blood"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="6dp"/>
    <TextView
            android:text="@string/blood"
            android:layout_width="70dp"
            android:layout_height="26dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="14dp"
            android:id="@+id/textView3" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:id="@+id/txt_Height" android:hint="@string/height"
            app:layout_constraintTop_toBottomOf="@+id/spn_Blood" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:id="@+id/txt_Weight"
            app:layout_constraintTop_toBottomOf="@+id/txt_Height" android:layout_marginTop="9dp"
            android:hint="@string/weight"
            android:autofillHints=""/>
    <Button
            android:text="회원가입"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:id="@+id/btnJoin" android:textSize="15sp" android:layout_marginStart="36dp"
            app:layout_constraintStart_toEndOf="@+id/txt_Weight" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="29dp" android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="ID는 소문자, 숫자만 입력가능"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:id="@+id/lbl_ID" app:layout_constraintTop_toBottomOf="@+id/txt_ID"
    />
    <TextView
            android:text="PW는 소문자,대문자, 숫자, 특수문자만 입력가능"
            android:layout_width="328dp"
            android:layout_height="23dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:id="@+id/lbl_PW" app:layout_constraintTop_toBottomOf="@+id/txt_PW"
    />
    <Spinner
            android:layout_width="117dp"
            android:layout_height="35dp"
            android:id="@+id/spn_Year"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_Name"/>
    <TextView
            android:text="생년월일"
            android:layout_width="61dp"
            android:layout_height="26dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="14dp"
            android:id="@+id/textView6" android:textSize="15sp" android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_Name" android:textAllCaps="false"
    />
    <Spinner
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:id="@+id/spn_Day" app:layout_constraintStart_toEndOf="@+id/spn_Month"
            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/txt_Name"
    />
    <Spinner
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:id="@+id/spn_Month" app:layout_constraintStart_toEndOf="@+id/spn_Year"
            app:layout_constraintTop_toBottomOf="@+id/txt_Name" android:layout_marginTop="3dp"/>
    <TextView
            android:layout_width="341dp"
            android:layout_height="24dp"
            android:id="@+id/msg_error" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_Weight" android:textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>