<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home">

    <Button
            android:text="@string/main_maps"
            android:layout_width="144dp"
            android:layout_height="82dp"
            android:id="@+id/btnMaps" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="69dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="142dp"
            android:layout_marginEnd="220dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/orderhistory"
            android:layout_width="144dp"
            android:layout_height="82dp"
            android:id="@+id/btnOrderHistory"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="69dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_Order"
            android:layout_marginStart="220dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/ConsumedCalory"
            android:layout_width="144dp"
            android:layout_height="82dp"
            android:id="@+id/btnCal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="69dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"
            android:layout_marginStart="220dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/order"
            android:layout_width="144dp"
            android:layout_height="82dp"
            android:id="@+id/btn_Order"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="69dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="220dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCal"/>
    <Button
            android:text="@string/maprecord"
            android:layout_width="144dp"
            android:layout_height="82dp"
            android:id="@+id/btnMapRecord"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="69dp" android:layout_marginTop="82dp"
            app:layout_constraintTop_toBottomOf="@+id/btnMaps"
            android:layout_marginEnd="220dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="153dp"
            android:layout_height="27dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="196dp"
            android:id="@+id/Loginuser" android:textSize="18sp" android:textAlignment="viewEnd"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="님 환영합니다!"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:id="@+id/textView18" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
</android.support.constraint.ConstraintLayout>