<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductOrder">

    <TextView
            android:text="@string/cheer_up"
            android:layout_width="341dp"
            android:layout_height="30dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView5" android:textSize="24sp"
            android:textAlignment="center" android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <ImageView
            android:layout_width="341dp"
            android:layout_height="224dp" app:srcCompat="@drawable/product"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="23dp"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="27dp" android:contentDescription="TODO"/>
    <TextView
            android:text="@string/price_5500"
            android:layout_width="335dp"
            android:layout_height="25dp"
            android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.163"/>
    <TextView
            android:text="@string/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:textSize="20sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="48dp"
            android:layout_height="41dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ProdCnt"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="11dp" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:autofillHints=""
            android:hint="0" android:textAlignment="viewEnd"
            android:maxLength="2"/>
    <TextView
            android:text="@string/Quantity_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:textSize="20sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            android:layout_marginEnd="17dp" app:layout_constraintStart_toEndOf="@+id/ProdCnt"
            android:layout_marginStart="13dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <EditText
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtAddress" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintTop_toBottomOf="@+id/ProdCnt" android:layout_marginTop="58dp"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:hint="@string/inAddress"
            android:textSize="13sp" android:autofillHints=""/>
    <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:textSize="20sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="34dp" app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="결재 금액 :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:textSize="20sp" android:layout_marginStart="17dp"
            app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <TextView
            android:text="0"
            android:layout_width="92dp"
            android:layout_height="29dp"
            android:id="@+id/totPrice" android:layout_marginStart="1dp"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:textSize="20sp"
            android:textAlignment="viewEnd" app:layout_constraintEnd_toStartOf="@+id/textView19"
    />
    <TextView
            android:text="원"
            android:layout_width="21dp"
            android:layout_height="29dp"
            android:id="@+id/textView19" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totPrice" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:textSize="20sp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <TextView
            android:text="TextView"
            android:layout_width="359dp"
            android:layout_height="28dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/txtOrdErr" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" app:layout_constraintTop_toBottomOf="@+id/txtAddress"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="14dp"
            android:maxLength="100"/>
    <Button
            android:text="주문"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OrderUser" android:layout_marginStart="223dp"
            app:layout_constraintStart_toEndOf="@+id/textView12" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="23dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/totPrice" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>